[package]
edition = "2021"
authors = ["embers-of-the-fire <stellarishs@163.com>"]
readme = "README.md"

name = "conrig"
version = "0.2.0"
homepage = "https://github.com/embers-of-the-fire/conrig/"
repository = "https://github.com/embers-of-fire/conrig.git"
keywords = ["config", "configuration", "file", "file-system"]
categories = ["config", "development-tools", "filesystem"]
description = "Configure once, use anywhere."

license = "MIT OR Apache-2.0"

[dependencies]
directories = "5.0.1"
serde = "1.0.203"
thiserror = "1.0.61"

## optional – config file format
ron = { version =  "0.8.1", optional = true }
serde_json = { version = "1.0.117", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
toml = { version = "0.8.13", optional = true }
cfg-if = "1.0.0"

[features]
default = ["all-format", "full-desc"]

## formats
all-format = ["ron", "yaml", "json", "toml"]
json = ["serde_json"]
yaml = ["serde_yaml"]

## error messages
full-desc = []

[dev-dependencies]
serde_derive = "1.0.203"

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--generate-link-to-definition"]
